@@ -16,6 +16,10 @@ Revision history for Fatal
 	* autodie::exception::match is better exercised in the 5.8
 	  test suite.
 
+	* Re-enabled (failing) 'use autodie' vanilla tests.  Currently
+	  autodie seems to be leaking scope in an odd way, possibly
+	  from clean-up code not triggering?
+
 1.10_06 Sun Jun 22 21:50:39 AUSEST 2008
 
 	* RELEASE CODENAME: "Chocolateboy", in thanks for his wonderful
